fix(PC-123): fix dark mode in burger menu

--- a/src/components/common/Header/MobileMenu/MobileMenu.module.scss
+++ b/src/components/common/Header/MobileMenu/MobileMenu.module.scss
@@ -25,7 +25,7 @@
 .panel {
   position: absolute;
   inset: 0;
-  background: white;
+  background: var(--bg-color);
 
   transform: translateX(100%);
   transition: transform $duration ease;
